--- a/1/litecoin.conf
+++ b/1/litecoin.conf
@@ -17,7 +17,7 @@ rpcpassword=myAmazingRPCPassword
 # as many rpcallowip= settings as you like to allow connections from
 # other hosts (and you may use * as a wildcard character):
 #rpcallowip=10.1.1.34
-rpcallowip=*
+rpcallowip=192.168.1.0/24
 
 # Listen for RPC connections on this TCP port:
 port=19333
